feat: add time part
